--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Depends:
 Imports:
   Rsamtools,
   GenomicRanges,
-  GenomicAlignments
+  GenomicAlignments,
+  data.table,
+  Matrix,
+  scater
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
