--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,11 @@ Imports:
   data.table,
   Matrix,
   scater,
-  dplyr
+  dplyr,
+  stats,
+  ggrepel,
+  ggalluvial,
+  biomaRt
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
