--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Imports:
   ggrastr,
   miloR,
   viridis,
-  edgeR
+  edgeR,
+  ggraph,
+  igraph
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
