Added plotNhoodSizeHist export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(plotAnnotationAlluvium)
 export(plotNhoodMappings)
 export(plotNhoodMaxSim)
 export(plotNhoodSimGroups)
+export(plotNhoodSizeHist)
 export(plotPseudocells)
 export(plotReadDistsNearGene)
 export(plotTrajMappings)
