Added additional colour palettes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,14 @@ export(downsampleSCE)
 export(exportToGMT)
 export(filterSharedFeatures)
 export(getCelltypeColours)
+export(getDiscreteColours)
 export(getEnsemblHomologs)
 export(getGenesFromGOTerms)
 export(getMaxMappings)
 export(getMeanExpression)
 export(getNhoodPositions)
 export(getSharedUniqueMarkers)
+export(getStageColours)
 export(loadRabbitData)
 export(loadReadsAroundGRange)
 export(loadTyser2020)
