Updated namespace plotGeneUMAP export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(loadWOTData)
 export(loadYang2021)
 export(plotAnnotatedUMAP)
 export(plotAnnotationAlluvium)
+export(plotGeneUMAP)
 export(plotNhoodMappings)
 export(plotNhoodMaxSim)
 export(plotNhoodSimGroups)
@@ -91,3 +92,4 @@ importFrom(miloR,nhoodGraph)
 importFrom(scater,logNormCounts)
 importFrom(stats,aggregate)
 importFrom(viridis,scale_color_viridis)
+importFrom(viridis,scale_colour_viridis)
